<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:dimo="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/header_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="0.5dp"
            android:background="@color/store_checkout_step_progress"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:background="@color/store_checkout_step_progress_disable"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="0.5dp"
            android:background="@color/store_checkout_step_progress_disable"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">
        <com.dimo.PayByQR.view.DIMOButton
            android:id="@+id/activity_store_btn_lanjut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_alignParentBottom="true"
            android:text="@string/bt_store_lanjut"
            android:textColor="@color/theme_text_over_basic_bg"
            dimo:bgColor="@color/theme_colorPrimary"
            dimo:buttonSize="normal"
            dimo:font="@string/font_helvetica" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_above="@id/activity_store_btn_lanjut">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.dimo.PayByQR.view.DIMOEditText
                    android:id="@+id/activity_store_confirm_shipping_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="12dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:background="@drawable/background_store_edittext_state"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:inputType="textPersonName"
                    android:text=""
                    android:hint="@string/tx_store_checout_name_hint"
                    android:textColorHint="@color/store_cart_item_qty_btn"
                    android:textColor="@color/store_cart_item_name"
                    android:textSize="14dp"
                    dimo:font="@string/font_helvetica"/>
                <com.dimo.PayByQR.view.DIMOEditText
                    android:id="@+id/activity_store_confirm_shipping_phone"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_below="@id/activity_store_confirm_shipping_name"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="12dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:background="@drawable/background_store_edittext_state"
                    android:gravity="center_vertical"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:text=""
                    android:inputType="number"
                    android:hint="@string/tx_store_checout_telepon_hint"
                    android:textColorHint="@color/store_cart_item_qty_btn"
                    android:textColor="@color/store_cart_item_name"
                    android:textSize="14dp"
                    dimo:font="@string/font_helvetica"/>
                <com.dimo.PayByQR.view.DIMOEditText
                    android:id="@+id/activity_store_confirm_shipping_email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_below="@id/activity_store_confirm_shipping_phone"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="12dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:background="@drawable/background_store_edittext_state"
                    android:gravity="center_vertical"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:text=""
                    android:hint="@string/tx_store_checout_email_hint"
                    android:textColorHint="@color/store_cart_item_qty_btn"
                    android:textColor="@color/store_cart_item_name"
                    android:textSize="14dp"
                    dimo:font="@string/font_helvetica"/>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>